...
        )
    }
}

object InventoryTestTags {
    const val LIST_SCREEN = "inventory_screen"
    const val REGISTER_PRODUCTS = "inventory_register_products"
    const val REGISTRATION_SCREEN = "inventory_registration_screen"
    const val REGISTRATION_STATUS = "inventory_registration_status"
    const val DETAIL_SCREEN = "inventory_detail_screen"
    const val DETAIL_LIST = "inventory_detail_list"
    const val SEARCH = "inventory_search"
    const val SEARCH_CLEAR = "inventory_search_clear"
    const val SEARCH_MODE = "inventory_search_mode"
...
